web-infras/parser/tests/fixtures/babel/core/uncategorised/468/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,37)
1|function hello() {'use strict'; var eval = 10; }
 |                                   ^
